force-app/main/default/objects/Managers_Assignment__c/Managers_Assignment__c.object-meta.xml
<CustomObject>
    <label>Managers Assignment</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Managers Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managers Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>