force-app/main/default/objects/Managers_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Managers Assignments</relationshipLabel>
    <relationshipName>Managers_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>